adding theme logic in redux

--- a/React_WorkPlace/ReactApplication_01/src/index.css
+++ b/React_WorkPlace/ReactApplication_01/src/index.css
@@ -1,1 +1,11 @@
 @import "tailwindcss";
+
+.light-theme {
+  background-color: white;
+  color: black;
+}
+
+.dark-theme {
+  background-color: #222;
+  color: white;
+}
